# opengl-render

./: README.md
cmake/: FindGstreamer.cmake
shaders/: TextVertexShader.fragmentshader  TextVertexShader.vertexshader
src/: CMakeLists.txt
src/cpp/: alpha_blending_with_text.cpp  controls.cpp  detection_window.cpp  draw_cube.cpp  draw_cube_change_color.cpp  draw_text2D.cpp  draw_texture.cpp  image_viewer.cpp  main.cpp  movement.cpp  shader.cpp  text2D.cpp  texture.cpp
src/include/: controls.hpp  detection_window.hpp  objloader.hpp
